--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,3 +73,23 @@ menu {
 	background-color: #ccfeff;
 		color: #009699;
 }
+
+#para1
+	-webkit-animation-name: ticker; 
+	-webkit-animation-duration: 7s; 
+	animation-name: ticker;
+	animation-duration: 7s;
+
+}
+
+@-webkit-keyframes ticker {
+	0%   {background-color: left:0%; top:0px;}
+	100% {background-color: left:100%; top:0px;}
+	
+}
+
+@keyframes ticker {
+	0%   {background-color: left:0%; top:0px;}
+	100% {background-color: left:100%; top:0px;}
+	
+}
